fix: improve contrast for code sent message (#114)
* improve contrast for code sent message


* change ux for resent code message


* add resend countdown


* Add OTP countdown, new hook for countdowns


* add proptypes for codeLifeTime prop


---------

--- a/src/components/login-passwordless/index.module.scss
+++ b/src/components/login-passwordless/index.module.scss
@@ -1,21 +1,15 @@
 .passwordlessWrapper {
-  height: 400px;
+  height: 450px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 
   .codeSent {
-    background-color: #fff6d7;
-    font-size: 16px;
-    color: #767676;
-    text-align: center;
-    width: 200px;
-    position: absolute;
-    top: 10px;
-    left: calc(50% + 100px);
-    height: 50px;
-    line-height: 50px;
+    margin-top: 10px;
+    color: #e5424d;
+    font-weight: bold;
+    font-size: 14px;
   }
 
   .innerWrapper {
@@ -63,7 +57,7 @@
       font-size: 14px;
     }
     .verify {
-      margin-top: 20px;
+      margin-top: 10px;
       .button {
         padding: 10px 30px;
         font-weight: normal;
@@ -88,10 +82,18 @@
     margin: auto 0 0 0;
     font-weight: normal;
     font-size: 14px;
-    span {
+    button {
       color: var(--color_text_dark);
       text-decoration: underline;
       cursor: pointer;
+      display: inline;
+      border: none;
+      background-color: transparent;
+      padding: 0;
+    }
+    .disabled {
+      color: var(--color_text_med);
+      cursor: not-allowed;
     }
   }
 }
